curso/curso-istio-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: curso-vs
  namespace: mauro-teste
spec:
  hosts:
    - curso.local
  gateways:
    - comum/curso-http-gateway
  http:
    - match:
        - uri:
            prefix: "/teste"
      route:
        - destination:
            host: curso-service
            port:
              number: 3005
    - route:
        - destination:
            host: curso-service
            port:
              number: 3005
